index.html scripts.js styles.css

--- a/styles.css
+++ b/styles.css
@@ -388,3 +388,148 @@ h3 {
   align-items: center;
   background-image: url(./banner.jpg);
 }
+
+.contactform {
+  display: grid;
+  flex-direction: column;
+  margin: 20px;
+}
+
+.icons2 {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  gap: 40px;
+  font-size: 20px;
+}
+
+.icons2 a:hover {
+  background-color: #ed2d34;
+  transition-delay: 0.2s;
+  color: white;
+  transition: ease-in 0.3s;
+  border-radius: 50%;
+  padding: 13px;
+}
+
+.icons2 a {
+  color: black;
+}
+
+#contactPage {
+  background-image: url(./banner.jpg);
+  height: 100%;
+  margin-bottom: 100px;
+}
+
+.page-header-container3 {
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 35px;
+  margin-bottom: 40px;
+}
+
+.contact-details-heading {
+  margin-bottom: 35px;
+  font-size: 30px;
+  font-weight: 100;
+  color: #464646;
+}
+
+#contact-form {
+  display: flex;
+  border: none;
+  position: relative;
+  flex-direction: column;
+  width: 25%;
+  right: 10%;
+  top: 8%;
+  font-size: 50px;
+}
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
+}
+
+.btn3 {
+  border-radius: 30px;
+  border: 2px solid #ed2d34;
+  display: flex;
+  justify-content: center;
+  color: #ed2d34;
+  width: 100%;
+  height: 20%;
+  text-decoration: none;
+  padding: 15px;
+  font-weight: 550;
+  transition: all;
+  cursor: pointer;
+  background-color: white;
+  font-size: 20px;
+  align-items: center;
+  outline: none;
+  text-transform: uppercase;
+}
+
+.btn3:hover {
+  background-color: #ed2d34;
+  transition-delay: 0.2s;
+  color: white;
+  transition: ease-in 0.2s;
+  border: none;
+}
+
+.contact-details-description {
+  margin-bottom: 30px;
+  font-weight: 100;
+  font-size: 16px;
+  color: #464646;
+}
+
+.contact-details {
+  margin-right: 30px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+}
+
+.contact-info {
+  color: #464646;
+  font-size: 17px;
+  font-weight: normal;
+  margin-bottom: 35px;
+  justify-content: flex-start;
+}
+
+.content2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.fas {
+  font-size: 30px;
+}
+
+.main-color {
+  font-size: 50px;
+}
+
+.contact-input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #999;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin: 0 0 20px 0;
+}
+
+.contactsection {
+  width: 50%;
+  margin-right: 150px;
+  margin-bottom: 50px;
+}
